# mcl_3dl

./: .codecov.yml  .dockerignore  .gitignore  .rosinstall  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Dockerfile  Dockerfile.indigo  Dockerfile.kinetic  Dockerfile.melodic  LICENSE  LICENSE.pcl-backports  README.md  codecov.yml  package.xml  test.txt
.github/: Dockerfile  get_dataset.sh  prerelease.conf  prerelease.conf.sample  prerelease_test.sh  test.conf  test.conf.sample  test.sh
.github/workflows/: abuild.env  alpine-ros1-release.yaml  bloom-release.yml  create-release.yaml  hide-old-bot-comments.yaml  hide-old-bot-comments.yml  prerelease.yaml  release-candidate.yaml  release-candidate.yml  test.env  test.yaml
.post-release/: Dockerfile  README.md  docker-compose.yml  post-release-test.sh  test.sh
.test-scripts/: cache_dataset.sh  save_cache.sh  test.sh
.travis/: Dockerfile  cache_dataset.sh  prerelease_test.sh  test.sh
.travis.scripts/: install_deps.sh  load_cache.sh  save_cache.sh  setup_docker.sh  test.sh  update_docker.sh
cfg/: MCL3DLParams.cfg
config/: mcl_3dl_demo.rviz  test_localization.yaml  test_localization_noimu.yaml  test_localization_noodom.yaml
doc/: Algorithms.md  DemoWithoutOdometry.md  ExperimentalDemos.md  Parameters.md
include/: chunked_kdtree.h  compatibility.h  filter.h  nd.h  pf.h  quat.h  raycast.h  vec3.h
include/mcl_3dl/: chunked_kdtree.h  cloud_accum.h  filter.h  filter_nd.h  filter_vec3.h  imu_measurement_model_base.h  lidar_measurement_model_base.h  mcl_3dl.h  motion_prediction_model_base.h  nd.h  noise_generator.h  noise_generator_base.h  parameters.h  pf.h  point_cloud_random_sampler.h  point_conversion.h  point_types.h  quat.h  raycast.h  state_6dof.h  vec3.h
include/mcl_3dl/imu_measurement_models/: imu_measurement_model_gravity.h
include/mcl_3dl/lidar_measurement_models/: lidar_measurement_model_beam.h  lidar_measurement_model_likelihood.h
include/mcl_3dl/motion_prediction_models/: motion_prediction_model_differential_drive.h
include/mcl_3dl/noise_generators/: diagonal_noise_generator.h  multivariate_noise_generator.h
include/mcl_3dl/point_cloud_random_samplers/: point_cloud_sampler_with_normal.h  point_cloud_uniform_sampler.h
include/mcl_3dl/raycasts/: raycast_using_dda.h  raycast_using_kdtree.h
include/mcl_3dl_compat/: compatibility.h
include/pcl18_backports/: accumulators.h  centroid.h  point_types.h  voxel_grid.h
launch/: mcl_3dl.rviz  test.launch
msg/: Status.msg
script.docker/: init.sh  load_cache.sh  save_cache.sh  test.sh
src/: cloud_accum.cpp  filter.hpp  lidar_measurement_model_beam.cpp  lidar_measurement_model_likelihood.cpp  mcl_3dl.cpp  mcl_3dl_node.cpp  nd.hpp  parameters.cpp  pf.hpp  point_types.cpp  quat.hpp  vec3.hpp
srv/: ResizeParticle.srv
test/: .codecov.yml  CMakeLists.txt
test/src/: compare_pose.cpp  compare_tf.cpp  performance_raycast.cpp  test_beam_label.cpp  test_beam_likelihood.cpp  test_chunked_kdtree.cpp  test_cloud_accum.cpp  test_debug_output.cpp  test_expansion_resetting.cpp  test_filter.cpp  test_global_localization.cpp  test_imu_measurement_model_gravity.cpp  test_landmark.cpp  test_mcl_3dl_compat.cpp  test_mcl_3dl_compat_incompatible.cpp  test_motion_prediction_model_differential_drive.cpp  test_nd.cpp  test_noise_generator.cpp  test_parameters.cpp  test_pf.cpp  test_point_cloud_random_sampler.cpp  test_point_cloud_random_sampler_with_normal.cpp  test_point_types.cpp  test_quat.cpp  test_random_samplers.cpp  test_raycast.cpp  test_raycast_dda.cpp  test_state_6dof.cpp  test_transform_failure.cpp  test_vec3.cpp
test/tests/: beam_label_rostest.test  beam_likelihood_rostest.test  debug_output_rostest.test  expansion_resetting_rostest.test  global_localization_rostest.test  landmark_rostest.test  localization_rostest.test.in  mcl_3dl_compat_incompatible_rostest.test  mcl_3dl_compat_rostest.test  parameters_rostest.test  tf_rostest.test.in  transform_rostest.test
